50_K8S/5.8. App configuration/task2/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  tls:
  - hosts:
      - localhost
    secretName: nginx-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-k8s
            port:
              number: 80
